# memscope

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: CALLSITE_TYPE_INFERENCE_SPEC.md  GLOBAL_ADDRESS_RESOLUTION.md  architecture.md  eBPF底层原理深度剖析.md  usage.md  技术文档_MemScope执行流程与原理.md
src/: config.h.in
src/benchmark/: CMakeLists.txt  bench_runner.sh  bench_target.c  bench_target_v2.c  demo_resolve.sh  demo_verify_v2.sh
src/bpf/: CMakeLists.txt  memscope.bpf.c  memscope_common.h  vmlinux.h
src/collector/: CMakeLists.txt  collector.c  collector.h  main.c
src/dwarf/: CMakeLists.txt  dwarf_analyzer.cpp  dwarf_analyzer.h
src/resolver/: CMakeLists.txt  address_resolver.cpp  address_resolver.h  main.cpp  source_code_analyzer.cpp  source_code_analyzer.h
tests/test_cases/: CMakeLists.txt  quick_verify.sh  test_alloc_tracking.c  test_field_resolution.c  test_global_resolution.c  test_struct_layout.c  verify_global_resolution.sh
